Eliminated all problems from source code